--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.15.2
 plotly==5.10.0
-pandas==1.5.2
 odoorpc==0.7.0
 prometheus_client==0.14.1
-numpy  # New dependency
+pandas==1.5.3
+numpy==1.21.6
 pytest  # Add pytest here
